nginxingress/4.ingress/ingingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  labels:
    project: snackbar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: home
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /order
            backend:
              service:
                name: order
                port:
                  number: 80
          - pathType: Prefix
            path: /payment
            backend:
              service:
                name: payment
                port:
                  number: 80
          - pathType: Prefix
            path: /auth-module
            backend:
              service:
                name: authmodule
                port:
                  number: 8080
